GH-4950 LMDB: fix transaction handling for index creation and reindexing